BUG: Fixed TimeLine icon alignment issue

--- a/src/Components/Root/TimeLine/TimeLine.less
+++ b/src/Components/Root/TimeLine/TimeLine.less
@@ -43,6 +43,7 @@
 					.icon
 					{
 						right: -18px;
+						padding: 7px 7px 7px 7px;
 					}
 				}
 
@@ -54,6 +55,7 @@
 					.icon
 					{
 						left: -18px;
+						padding: 5px 7px 9px 7px;
 					}
 				}
 
@@ -64,7 +66,6 @@
 					display: block;
 					width: @iconSize;
 					height: @iconSize;
-					padding: 7px;
 					margin-top: -(@iconSize + @padding / 2);
 					text-align: center;
 					color: @white;
